# filcompare

./: .clang-format  .cmake-format.yaml  .codecov.yml  .gitignore  .gitmodules  .remarkrc  .reviewdog.yml  .travis.yml  CMakeLists.txt  Dockerfile  Doxyfile.in  LICENSE  README.md  _config.yml  codecov.yaml
.github/actions/docker_build/: action.yml
.github/workflows/: ccpp.yml  reviewdog.yml
src/: CMakeLists.txt  FCFileInfo.cpp  FCFileInfo.hpp  FCFileInfoHelpers.cpp  FCFileInfoHelpers.hpp  FCHelpers.cpp  FCHelpers.hpp  FCMount.cpp  FCMount.hpp  FCSqliteHandle.hpp  FCSqliteIO.cpp  FCSqliteIO.hpp  FCSqliteLib.hpp  Handle.hpp  IFCSqliteStorage.hpp  filcompare.cpp  log.hpp
src/sqlite_lib_own_implementation/: CMakeLists.txt  FCSqliteIO.cpp  FCSqliteIO.hpp  FCSqliteLib.hpp  Handle.hpp
src/sqlitecpp_lib/: CMakeLists.txt  FCSqliteCppImpl.cpp  FCSqliteCppImpl.hpp
submodules/: CMakeLists.txt
tests/: CMakeLists.txt  FCFIleInfoTest.cpp
