project(filcompare LANGUAGES CXX)
cmake_minimum_required(VERSION 3.10)
# Link this 'library' to set the c++ standard / compile-time options requested
set(CMAKE_VERBOSE_MAKEFILE ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
add_library(project_options INTERFACE)
target_compile_features(project_options INTERFACE cxx_std_17)
include_directories(${CMAKE_SOURCE_DIR})
include_directories(submodules/SQLiteCpp/include)
add_subdirectory(submodules)
add_subdirectory(src)
add_subdirectory(tests)
include(cmake/StaticAnalyzers.cmake)
